--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker build . --build-arg SOURCE_COMMIT=${SOURCE_COMMIT} -t ${IMAGE_NAME} .
+docker build . --build-arg SOURCE_COMMIT=${SOURCE_COMMIT} -t ${IMAGE_NAME}
