Add CORS header for stream

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,6 +49,8 @@ http {
 
         location /live {
             flv_live on;
+
+            add_header 'Access-Control-Allow-Origin' '*';
         }
     }
 }
