Delegate SSL to upstream proxy

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,23 +13,10 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    gzip on;
     add_header 'Access-Control-Allow-Origin' '*';
 
     server {
-        listen 80;
-        server_name ${LAB_DOMAIN_NAME};
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
-
-    server {
-        listen 443 ssl default_server;
-        server_name ${LAB_DOMAIN_NAME};
-
-        include ssl.conf;
+        listen 80 default_server;
 
         location / {
             root /var/www;
